# pdearena

./: .gitignore  EFFICIENT_PHYSICS_LEARNING_DATASET.md  EXPERIMENTAL_SETUP.md  FRAMEWORK_PROMPT.md  README.md  eff_dataset_links.toml  pyproject.toml  setup.py
configs/: eff_allen_cahn_fno.yaml  eff_allen_cahn_parametric.yaml  eff_burgers_fno.yaml  eff_burgers_parametric.yaml  eff_convection_fno.yaml  eff_convection_parametric.yaml  eff_flow_mixing_parametric.yaml  eff_helmholtz2D_fno.yaml  eff_helmholtz2D_parametric.yaml  eff_helmholtz3D_parametric.yaml
docs/: install.md  train.md
pdearena/: __init__.py  metrics_export.py
pdearena/data/: eff_physics_datamodule.py  eff_physics_dataset.py
pdearena/models/: eff_parametric_fno.py  eff_parametric_unet.py
pdearena/modules/conditioned/: oned_unet.py  twod_resnet.py
requirements/: uv-repro.txt
results/reproducibility/: README.md  aggregated_summary_tables.txt
results/reproducibility/example_metrics/: seed_0_example_metrics.json  seed_1_example_metrics.json  seed_2_example_metrics.json
results/reproducibility/split_indices/: seed_1_split_indices.yaml
scripts/: aggregate_seed_results.py  compute_model_stats.py  eff_collect_rebuttal_costs_cluster.sh  eff_collect_train_cost_cluster.sh  eff_parametric_fno_train.py  eff_parametric_train.py  run_all_eff_experiments.py  verify_split_indices.py
